kubernetes/apps/media/prowlarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Prowlarr
    gethomepage.dev/group: Media
    gethomepage.dev/icon: prowlarr.png
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "prowlarr.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: prowlarr
          port: 80
